# multi-agent-s2c

./: .env.template  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  MEMORY.md  README.md  alembic.ini  eslint.config.js  index.html  main.py  package-lock.json  pyproject.toml  ruff.toml  tsconfig.json
.claude/: settings.local.json
.claude/commonds/: agent-management.md  deployment.md  development.md  git-workflow.md  testing.md  troubleshooting.md
.claude/hooks/: check-commit-related.ts
.claude/rules/: agent-design.md  code-style.md  testing-requirements.md
.codex/: hooks.json
.gemini/skills/frontend-architecture/: SKILL.md
.gemini/skills/tailwind-ui/: SKILL.md
.gemini/skills/vue3-ts/: SKILL.md
doc/: ragas.md
docker/: api.Dockerfile  backend.Dockerfile  docker-compose.yml  redis.conf
migrate/: env.py
migrate/versions/: 0001_initial.py  0002_agent_runs.py  0003_knowledge.py  0003_library_items.py  0004_tool_calls.py  0005_attachment_asset_index.py
sandbox_server/: Dockerfile  app.py  requirements.txt  sandbox.env
scripts/: migrate.py
server/: lifespan.py  main.py  worker.py
server/middleware/: auth.py
server/router/: __init__.py  agent.py  agent_router.py  auth.py  auth_router.py  chat.py  chat_router.py  conversation.py  file.py  knowledge.py  library.py  library_router.py  model_router.py  thread_router.py
server/service/: __init__.py  agent_consumer_service.py  agent_queue_service.py  agent_run_service.py  arq_queue_servcie.py  chat_service.py  conversation_service.py  input_message_service.py  knowledge_service.py  langfuse_service.py  mcp_service.py  model_service.py  skill_service.py  subagent_service.py  thread_service.py
server/service/spec/: agent-run-sepc.md  arq-queue-spec.md
server/utils/: __init__.py  auth.py  logger.py
src/: main.ts
src/agents/: __init__.py  base_agent.py  base_context.py  manager.py  manger.py
src/agents/backends/: composite_backend.py  memories_backend.py
src/agents/common/: __init__.py  base_agent.py  base_context.py  runtime_context.py
src/configs/: __init__.py  config.py  model.py
src/database/: __init__.py  initializer.py  manger.py  migration.py  models.py  pg-design-spec.md  session.py
src/knowledge/: __init__.py  base.py  document_praser.py  factory.py  lightrag.py  milvus.py
src/plugins/: __init__.py
src/router/: index.ts
src/storage/: __init__.py  minio.py
src/styles/: tokens.css
src/types/: prototype.ts
src/utils/: image_process.py  logger.py
test/: demo_astream_events_v3_values.py  test_agent_run_service.py  test_webserach_concurrent.py
web/: AGENTS.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
web-chatgpt/: .gitignore  AGENTS.md  README.md  index.html
web/src/: App.tsx  App.vue  main.ts  main.tsx
(+411 files in other folders)
