[project]
name = "multi-agent-s2c"
version = "0.1.0"
description = "多智能体剧本创作"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "fastapi-auth-middleware>=1.0.2",
    "python-multipart>=0.0.20",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "lightrag-hku>=1.4.9",
    "email-validator>=2.2.0",
    "minio>=7.2.18",
    "passlib[bcrypt]>=1.7.4",
    "pymilvus>=2.6.11",
    "pyjwt>=2.10.1",
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.41.0",
]
