[project]
name = "multi-agent-s2c"
version = "0.1.0"
description = "多智能体剧本创作"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.17.2",
    "arq>=0.28.0",
    "asyncpg>=0.30.0",
    "dotenv>=0.9.9",
    "fastapi>=0.135.1",
    "fastapi-auth-middleware>=1.0.2",
    "python-multipart>=0.0.20",
    "langchain>=1.2.12",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "markdownify>=1.2.0",
    "email-validator>=2.2.0",
    "minio>=7.2.18",
    "onnxruntime>=1.26.0",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=11.2.1",
    "pymilvus>=2.6.11",
    "pyjwt>=2.10.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.9.1",
    "rapidocr>=3.8.1",
    "scikit-learn>=1.9.0,<2",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.41.0",
    "langgraph-checkpoint-postgres>=3.0.5",
    "psycopg-binary>=3.3.4",
    "docling>=2.93.0",
    "langfuse>=4.6.1",
    "langchain-tavily>=0.2.0",
    "deepagents>=0.6.12",
    "ruff>=0.15.14",
    "redis>=5,<6",
    "httpx>=0.28.1",
    "langchain-deepseek>=1.1.0",
    "langchain-mcp-adapters>=0.2.2,<0.3",
    "agent-sandbox>=0.0.30",
    "a2a-sdk>=1.1.0",
]
